--- a/src/main/resources/templates/vets/createOrUpdateVetForm.html
+++ b/src/main/resources/templates/vets/createOrUpdateVetForm.html
@@ -1,147 +1,31 @@
 <html xmlns:th="http://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
+      th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 
 <body>
 
-  <h2>Veterinarian</h2>
-  <form th:object="${vet}" class="form-horizontal" id="add-vet-form" method="post">
+<h2>Veterinarian</h2>
+<form th:object="${vet}" class="form-horizontal" id="add-vet-form" method="post">
     <div class="form-group has-feedback">
-    	<!--- <div th:object="${name}" >
-    		<input
-        	th:replace="~{fragments/inputField :: input ('Specialty', 'name', 'text')}" />
-        </div>--->
-      <input
-        th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}" />
-      <input
-        th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}" />
+        <input th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}"/>
+        <input th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}"/>
 
-        <ul>
-            <li th:each="obj : ${vet.getSpecialties()}">
-                <!--<input th:value="${spec.id}" th:name="spec.id"/>-->
-                <input th:value="${obj.getName()}" th:name="spec.name"/>
-            </li>
-        </ul>
-        <!--<input th:each="spec : ${vet.specialties}"-->
-                  <!--th:text="${spec.name + ' '}" /> <input-->
+        <div th:object="${specialty}">
+            <input th:object="${specialty}"
+                   th:replace="~{fragments/inputField :: input ('Specialty Name', 'name', 'text')}"/>
+        </div>
 
-        <!--<ul>-->
-            <!--<li th:each="specialty : ${vet.specialties.siz}">-->
-                <!--<input-->
-                        <!--th:replace="~{fragments/inputField :: input ('Speciality Name', 'name', 'text')}"/>-->
-            <!--</li>-->
-        <!--</ul>-->
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button
-          th:with="text=${vet['new']} ? 'Add Veterinarian' : 'Update Veterinarian'"
-          class="btn btn-default" type="submit" th:text="${text}">Add
-          Veterinarian</button>
-      </div>
+        <div class="col-sm-offset-2 col-sm-10">
+            <button
+                    th:with="text=${vet['new']} ? 'Add Veterinarian' : 'Update Veterinarian'"
+                    class="btn btn-default" type="submit" th:text="${text}">Add
+                Veterinarian
+            </button>
+        </div>
     </div>
-  </form>
-
-
-  <!--<form th:object="${vet}" class="form-horizontal" id="add-vet-form" method="post">-->
-      <!--<div class="form-group has-feedback">-->
-          <!--&lt;!&ndash;- <div th:object="${name}" >-->
-              <!--<input-->
-              <!--th:replace="~{fragments/inputField :: input ('Specialty', 'name', 'text')}" />-->
-          <!--</div>-&ndash;&gt;-->
-          <!--<input-->
-                  <!--th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}" />-->
-          <!--<input-->
-                  <!--th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}" />-->
-          <!--<input-->
-                  <!--th:replace="~{fragments/inputField :: input ('Specialty', 'specialties', 'text')}" />-->
-      <!--</div>-->
-      <!--<div class="form-group">-->
-          <!--<div class="col-sm-offset-2 col-sm-10">-->
-              <!--<button-->
-                      <!--th:with="text=${vet['new']} ? 'Add Veterinarian' : 'Update Veterinarian'"-->
-                      <!--class="btn btn-default" type="submit" th:text="${text}">Add-->
-                  <!--Veterinarian</button>-->
-          <!--</div>-->
-      <!--</div>-->
-  <!--</form>-->
-
-
-
+</form>
 </body>
 </html>
 
-
-
-
-<!--<html xmlns:th="http://www.thymeleaf.org"-->
-      <!--th:replace="~{fragments/layout :: layout (~{::body},'vets')}">-->
-
-<!--<body>-->
-
-<!--<h2>Veterinarian</h2>-->
-<!--<form th:object="${vet}" class="form-horizontal" id="add-vet-form" method="post">-->
-    <!--<div class="form-group has-feedback">-->
-        <!--&lt;!&ndash;- <div th:object="${name}" >-->
-            <!--<input-->
-            <!--th:replace="~{fragments/inputField :: input ('Specialty', 'name', 'text')}" />-->
-        <!--</div>-&ndash;&gt;-->
-        <!--<input-->
-                <!--th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}" />-->
-        <!--<input-->
-                <!--th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}" />-->
-
-        <!--<ul>-->
-            <!--<li th:each="obj : ${vet.getSpecialties()}">-->
-                <!--&lt;!&ndash;<input th:value="${spec.id}" th:name="spec.id"/>&ndash;&gt;-->
-                <!--<input th:value="${obj.getName()}" th:name="spec.name"/>-->
-            <!--</li>-->
-        <!--</ul>-->
-        <!--&lt;!&ndash;<input th:each="spec : ${vet.specialties}"&ndash;&gt;-->
-        <!--&lt;!&ndash;th:text="${spec.name + ' '}" /> <input&ndash;&gt;-->
-
-        <!--&lt;!&ndash;<ul>&ndash;&gt;-->
-        <!--&lt;!&ndash;<li th:each="specialty : ${vet.specialties.siz}">&ndash;&gt;-->
-        <!--&lt;!&ndash;<input&ndash;&gt;-->
-        <!--&lt;!&ndash;th:replace="~{fragments/inputField :: input ('Speciality Name', 'name', 'text')}"/>&ndash;&gt;-->
-        <!--&lt;!&ndash;</li>&ndash;&gt;-->
-        <!--&lt;!&ndash;</ul>&ndash;&gt;-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-        <!--<div class="col-sm-offset-2 col-sm-10">-->
-            <!--<button-->
-                    <!--th:with="text=${vet['new']} ? 'Add Veterinarian' : 'Update Veterinarian'"-->
-                    <!--class="btn btn-default" type="submit" th:text="${text}">Add-->
-                <!--Veterinarian</button>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</form>-->
-
-
-<!--&lt;!&ndash;<form th:object="${vet}" class="form-horizontal" id="add-vet-form" method="post">&ndash;&gt;-->
-<!--&lt;!&ndash;<div class="form-group has-feedback">&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;- <div th:object="${name}" >&ndash;&gt;-->
-<!--&lt;!&ndash;<input&ndash;&gt;-->
-<!--&lt;!&ndash;th:replace="~{fragments/inputField :: input ('Specialty', 'name', 'text')}" />&ndash;&gt;-->
-<!--&lt;!&ndash;</div>-&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;<input&ndash;&gt;-->
-<!--&lt;!&ndash;th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}" />&ndash;&gt;-->
-<!--&lt;!&ndash;<input&ndash;&gt;-->
-<!--&lt;!&ndash;th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}" />&ndash;&gt;-->
-<!--&lt;!&ndash;<input&ndash;&gt;-->
-<!--&lt;!&ndash;th:replace="~{fragments/inputField :: input ('Specialty', 'specialties', 'text')}" />&ndash;&gt;-->
-<!--&lt;!&ndash;</div>&ndash;&gt;-->
-<!--&lt;!&ndash;<div class="form-group">&ndash;&gt;-->
-<!--&lt;!&ndash;<div class="col-sm-offset-2 col-sm-10">&ndash;&gt;-->
-<!--&lt;!&ndash;<button&ndash;&gt;-->
-<!--&lt;!&ndash;th:with="text=${vet['new']} ? 'Add Veterinarian' : 'Update Veterinarian'"&ndash;&gt;-->
-<!--&lt;!&ndash;class="btn btn-default" type="submit" th:text="${text}">Add&ndash;&gt;-->
-<!--&lt;!&ndash;Veterinarian</button>&ndash;&gt;-->
-<!--&lt;!&ndash;</div>&ndash;&gt;-->
-<!--&lt;!&ndash;</div>&ndash;&gt;-->
-<!--&lt;!&ndash;</form>&ndash;&gt;-->
-
-
-
-<!--</body>-->
-<!--</html>-->
 
